[package]
name = "livesplit-rendering"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[workspace]
members = ["glium-renderer", "title-abbreviations", "gfx-renderer", "vulkano-renderer"]

[dependencies]
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", rev = "70dc217cb720b1e51dcaea714adfdf935dbca91e" }
# livesplit-core = { path = "livesplit-core" }
lyon = "0.11.0"
rusttype = "0.7.2"
euclid = "0.19.2"
image = "0.20.0"
base64 = "0.10.0"
title-abbreviations = { path = "title-abbreviations" }
ordered-float = "1.0.1"

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
gfx-hal = { git = "https://github.com/CryZe/gfx", branch = "vulkan-msaa"  }
gfx-backend-vulkan = { git = "https://github.com/CryZe/gfx", branch = "vulkan-msaa" }
gfx-backend-dx12 = { git = "https://github.com/CryZe/gfx", branch = "vulkan-msaa" }
gfx-backend-gl = { git = "https://github.com/CryZe/gfx", branch = "vulkan-msaa" }
